# disk-guard-AIagent

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
data/: fill_disk.py  seed_demo_hosts.py  seed_runbooks.py  synthetic_generator.py
docker/demo-host/: Dockerfile  agent.py
docker/pgvector/: init.sql
docker/timescaledb/: init.sql
docker/timescaledb/migrations/: 01_servicenow_tickets.sql
docs/: disk-guard-whitepaper.docx  disk-guard-whitepaper.md  video_script.md  ~$sk-guard-whitepaper.docx
paper/arxiv/: ABSTRACT_SUBMISSION_TEXT.md  COMMENTS_FIELD.md  SUBMISSION_GUIDE.md
paper/ieee/: Makefile  README.md  disk-guard.tex  references.bib
scripts/: build_docx.sh  demo_reset.sh  generate_architecture_diagram.py  generate_paper_diagrams.py
services/decision_engine/: decision.py
services/ingestion/: __main__.py  ingest.py
services/llm_agent/: __main__.py  agent.py  prompts.py  rag.py  sanitizer.py  tools.py
services/ml_engine/: __main__.py  anomaly.py  features.py  pipeline.py  prophet_forecast.py
services/remediation/: executor.py  playbooks.py
services/servicenow_mock/: client.py
shared/: config.py  db.py  logging_setup.py  schemas.py
tests/: test_config.py  test_decision_engine.py  test_ml_anomaly.py  test_ml_features.py  test_sanitizer.py  test_servicenow_mock.py  test_synthetic_data.py
ui/: home.py
ui/lib/: actions.py  data.py  styles.py
ui/pages/: 1_🖥️_Host_Detail.py  2_🤖_OpsGPT.py  3_📋_Audit_Trail.py  4_📨_Tickets.py
